--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import './styles/normalize.css';
+@import './styles/button.css';
 
 body {
   background: rgb(34, 193, 195);
@@ -21,7 +22,7 @@ h2 {
 }
 
 .container {
-  width: 400px;
+  width: 600px;
   padding: 24px;
   display: flex;
   flex-direction: column;
@@ -39,18 +40,21 @@ label {
   margin: 8px;
   text-align: center;
   font-size: 24px;
+  padding-bottom: 12px;
 }
 
 .input {
   display: block;
   width: 100%;
-  padding: 8px;
+  min-height: 400px;
+  padding: 12px 8px 12px 8px;
   margin: 8px auto;
   border: 0;
   border-radius: 4px;
   -webkit-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
   -moz-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
   box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+  background-color: #F5F5F5;
 }
 
 .container-output {
@@ -59,7 +63,7 @@ label {
 
 .output {
   width: 100%;
-  height: 32px;
+  min-height: 32px;
   background-color: #fff;
   padding: 8px;
   margin: 8px auto;
@@ -67,4 +71,9 @@ label {
   -webkit-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
   -moz-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
   box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+  background-color: #F5F5F5;
+}
+
+.output-visibility {
+  display: none;
 }
